expected/main/gens/primWriteRefStored-neg-64.err
ERROR: "writeRef-neg.lc", line 3
external writeRefStoredBit65 {primWriteRefStored (Bit 65)} :: Ref (Stored (Bit 65)) -> Bit 65 -> Proc Unit
         ^
No generated implementation: No memory access to stored values of width 65

ERROR: "writeRef-neg.lc", line 6
external writeRefStoredBit1K {primWriteRefStored (Bit 1K)} :: Ref (Stored (Bit 1K)) -> Bit 1K -> Proc Unit
         ^
No generated implementation: No known BitSize for Stored value of type Bit 1024

ERROR: Aborting after 2 previously reported errors

